examples/test/testpolicy3311.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3311
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key1: value5
      key28: value27
      key2: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value44
          key49: value5
          key27: value4
      podSelector:
        matchLabels:
          key20: value46
          key23: value14
